RESOLVED FIXED117872
[EFL] NetworkStateNotifierEfl: Use closeWithRetry instead of looping for EINTR on close
https://bugs.webkit.org/show_bug.cgi?id=117872
Summary [EFL] NetworkStateNotifierEfl: Use closeWithRetry instead of looping for EINT...
Sergio Correia (qrwteyrutiyoup)
Reported 2013-06-21 06:10:37 PDT
[EFL] NetworkStateNotifierEfl: Use closeWithRetry instead of looping for EINTR on close
Attachments
Patch (2.05 KB, patch)
2013-06-21 06:12 PDT, Sergio Correia (qrwteyrutiyoup)
no flags
Sergio Correia (qrwteyrutiyoup)
Comment 1 2013-06-21 06:12:49 PDT
Chris Dumez
Comment 2 2013-06-21 06:38:19 PDT
Comment on attachment 205173 [details] Patch Ok. r=me.
WebKit Commit Bot
Comment 3 2013-06-21 06:59:42 PDT
Comment on attachment 205173 [details] Patch Clearing flags on attachment: 205173 Committed r151834: <http://trac.webkit.org/changeset/151834>
WebKit Commit Bot
Comment 4 2013-06-21 06:59:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.