[EFL] NetworkStateNotifierEfl: Use closeWithRetry instead of looping for EINTR on close https://bugs.webkit.org/show_bug.cgi?id=117872

Patch by Sergio Correia <sergio.correia@openbossa.org> on 2013-06-21
Reviewed by Christophe Dumez.

closeWithRetry works around the Linux behavior of closing the file descriptor
unconditionally even if the close() call is interrupted.

No new tests, no behavior change.

* platform/network/efl/NetworkStateNotifierEfl.cpp:
(WebCore::NetworkStateNotifier::~NetworkStateNotifier): Use closeWithRetry instead of
looping for EINTR on close.

Canonical link: https://commits.webkit.org/136010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151834 268f45cc-cd09-0410-ab3c-d52691b4dbfc